# notion-app

./: calendar_1.py  notion_app.py  pyproject.toml
notes/: note_manager.py
react_notion_clone/backend/: .env.example  db.js  db_init.js  jest.config.js  package-lock.json  package.json  schema.md  server.js
react_notion_clone/backend/middleware/: authMiddleware.js
react_notion_clone/backend/routes/: auth.js  notes.js  tasks.js
react_notion_clone/backend/tests/: auth.test.js  notes.test.js  tasks.test.js
react_notion_clone/backend/utils/: jwt.js
react_notion_clone/frontend/: package-lock.json  package.json  vite.config.js
react_notion_clone/frontend/src/: App.css  App.jsx  index.css  main.jsx
react_notion_clone/frontend/src/components/: CalendarView.jsx  NoteCard.jsx  NoteCard.test.jsx  NoteForm.jsx  ProtectedRoute.jsx  TaskForm.jsx  TaskItem.jsx  TaskItem.test.jsx
react_notion_clone/frontend/src/context/: AuthContext.js
react_notion_clone/frontend/src/mocks/: handlers.js
react_notion_clone/frontend/src/pages/: LoginPage.jsx  LoginPage.test.jsx  NotesPage.jsx  RegisterPage.jsx  TasksPage.jsx
react_notion_clone/frontend/src/services/: api.js
react_notion_clone/frontend/src/tests/: setup.js
tasks/: task_manager.py
ui/: note_ui.py  task_ui.py
